--- a/index.html
+++ b/index.html
@@ -40,7 +40,39 @@
       <div
         id="phone-container"
         class="row row-cols-md-3 row-cols-sm-2 row-cols-1 g-5"
-      ></div>
+      >
+        <!-- Phone Card -->
+
+        <div class="d-none p-4 shadow bg-body rounded rounded-3">
+          <div class="bg-light">
+            <img
+              class="img-fluid mx-auto w-50 d-block py-4"
+              src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-mini.jpg"
+            />
+          </div>
+          <h4 class="text-center mt-3 mb-2">Apple iphone 13 min</h4>
+          <h5 class="text-center mb-4 text-secondary">Apple</h5>
+          <button
+            type="button"
+            class="btn btn-outline-primary d-block w-75 mx-auto py-2 fw-bold"
+            data-bs-toggle="modal"
+            data-bs-target="#foodDetails53043"
+          >
+            View Details
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="container my-4">
+      <!-- Empty State -->
+
+      <div id="empty-state" class="d-none container text-center">
+        <div>
+          <img class="img-fluid" src="img/emptyState.png" alt="epmty state" />
+        </div>
+        <h4 class="text-secondary">No phone found</h4>
+      </div>
     </section>
 
     <section id="modal-container" class="container"></section>
