--- a/index.html
+++ b/index.html
@@ -64,14 +64,22 @@
       </div>
     </section>
 
+    <!-- Empty State -->
     <section class="container my-4">
-      <!-- Empty State -->
-
       <div id="empty-state" class="d-none container text-center">
         <div>
           <img class="img-fluid" src="img/emptyState.png" alt="epmty state" />
         </div>
         <h4 class="text-secondary">No phone found</h4>
+      </div>
+    </section>
+
+    <!-- Spinner -->
+    <section id="spinner" class="d-none bg-black">
+      <div class="position-absolute top-50 start-50 translate-middle">
+        <div class="spinner-grow" role="status">
+          <span class="sr-only"></span>
+        </div>
       </div>
     </section>
 
