overflow + bg color fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="bg-light">
     <h1 class="mt-5 mb-4 text-center">Phone World 📱</h1>
 
     <div class="input-group my-3 w-75 mx-auto">
@@ -39,7 +39,7 @@
     <section class="container my-4">
       <div
         id="phone-container"
-        class="row row-cols-md-3 row-cols-sm-2 row-cols-1 g-5"
+        class="row row-cols-md-3 row-cols-sm-2 row-cols-1 gx-0 gx-sm-4 gy-4"
       >
         <!-- Phone Card -->
 
