Show All Button added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <input
         type="text"
         id="input-search"
-        class="form-control py-3"
+        class="form-control p-3"
         placeholder="Search Phone Brand..."
         aria-label="Search Phone Brand"
         aria-describedby="button-search"
@@ -62,6 +62,12 @@
           </button>
         </div>
       </div>
+      <!-- Show More Button -->
+      <div id="show-more-btn" class="d-none my-5 d-flex justify-content-center">
+        <button type="button" class="btn btn-primary fw-bold py-2 px-4">
+          Show All
+        </button>
+      </div>
     </section>
 
     <!-- Empty State -->
@@ -75,7 +81,7 @@
     </section>
 
     <!-- Spinner -->
-    <section id="spinner" class="d-none bg-black">
+    <section id="spinner" class="d-none text-primary">
       <div class="position-absolute top-50 start-50 translate-middle">
         <div class="spinner-grow" role="status">
           <span class="sr-only"></span>
