case insensitive fixed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </button>
     </div>
 
-    <section class="container my-4">
+    <section class="container mt-4 mb-5">
       <div
         id="phone-container"
         class="row row-cols-md-3 row-cols-sm-2 row-cols-1 gx-0 gx-sm-4 gy-4"
@@ -62,8 +62,8 @@
           </button>
         </div>
       </div>
-      <!-- Show More Button -->
-      <div id="show-more-btn" class="d-none my-5 d-flex justify-content-center">
+      <!-- Show All Button -->
+      <div id="show-all-btn" class="d-none my-5 d-flex justify-content-center">
         <button type="button" class="btn btn-primary fw-bold py-2 px-4">
           Show All
         </button>
