all done except popup

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         type="text"
         id="input-search"
         class="form-control p-3"
-        placeholder="Search Phone Brand..."
-        aria-label="Search Phone Brand"
+        placeholder="Search Phone here..."
+        aria-label="Search Phone here"
         aria-describedby="button-search"
       />
       <button
@@ -62,7 +62,9 @@
           </button>
         </div>
       </div>
+
       <!-- Show All Button -->
+
       <div id="show-all-btn" class="d-none my-5 d-flex justify-content-center">
         <button type="button" class="btn btn-primary fw-bold py-2 px-4">
           Show All
@@ -71,6 +73,7 @@
     </section>
 
     <!-- Empty State -->
+
     <section class="container my-4">
       <div id="empty-state" class="d-none container text-center">
         <div>
@@ -81,6 +84,7 @@
     </section>
 
     <!-- Spinner -->
+
     <section id="spinner" class="d-none text-primary">
       <div class="position-absolute top-50 start-50 translate-middle">
         <div class="spinner-grow" role="status">
@@ -98,6 +102,7 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- Custom JS -->
     <script src="js/script.js"></script>
   </body>
 </html>
