--- a/index.html
+++ b/index.html
@@ -93,7 +93,104 @@
       </div>
     </section>
 
-    <section id="modal-container" class="container"></section>
+    <section id="modal-container" class="container">
+      <!-- Button trigger modal -->
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#phoneDetails"
+      >
+        Launch demo modal
+      </button>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="phoneDetails"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div
+          class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable"
+        >
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Phone Details</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body p-2 p-lg-5">
+              <div class="container">
+                <div class="row gx-5 gy-5">
+                  <div class="col col-12 col-lg-5">
+                    <div class="bg-light">
+                      <img
+                        class="d-block w-75 p-4 mx-auto"
+                        src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-mini.jpg"
+                        alt="Phone Image"
+                      />
+                    </div>
+                  </div>
+                  <div class="col col-12 col-lg-7">
+                    <h2>iPhone 13 Pro Max</h2>
+                    <p class="text-primary text-capitalize">
+                      released 2021, September 24
+                    </p>
+                    <hr />
+                    <table
+                      class="table table-striped table-bordered caption-top"
+                    >
+                      <h5 class="text-secondary fw-bold mt-4 mb-3">
+                        Main Features
+                      </h5>
+                      <tbody>
+                        <tr>
+                          <th class="text-capitalize pe-5 ps-3">storage</th>
+                          <td>28GB/256GB/1TB storage, no card slot</td>
+                        </tr>
+                        <tr>
+                          <th class="text-capitalize pe-5 ps-3">displaySize</th>
+                          <td>
+                            6.7 inches, 109.8 cm2 (~87.4% screen-to-body ratio)
+                          </td>
+                        </tr>
+                        <tr>
+                          <th class="text-capitalize pe-5 ps-3">chipSet</th>
+                          <td>Apple A15 Bionic (5 nm)</td>
+                        </tr>
+                        <tr>
+                          <th class="text-capitalize pe-5 ps-3">memory</th>
+                          <td>
+                            28GB 6GB RAM, 256GB 6GB RAM, 512GB 6GB RAM, 1TB 6GB
+                            RAM
+                          </td>
+                        </tr>
+                        <tr>
+                          <th class="text-capitalize pe-5 ps-3">sensors</th>
+                          <td>
+                            "Face ID",<br />
+                            "accelerometer", <br />"gyro",
+                            <br />"proximity",<br />
+                            "compass",<br />
+                            "barometer"<br />
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Bootstrap JS -->
     <script
