--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <button
         type="button"
         class="btn btn-primary"
+        id="show-details-btn"
         data-bs-toggle="modal"
         data-bs-target="#phoneDetails"
       >
@@ -109,7 +110,7 @@
         class="modal fade"
         id="phoneDetails"
         tabindex="-1"
-        aria-labelledby="exampleModalLabel"
+        aria-labelledby="phoneModalLabel"
         aria-hidden="true"
       >
         <div
@@ -117,7 +118,7 @@
         >
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Phone Details</h5>
+              <h5 class="modal-title" id="phoneModalLabel">Phone Details</h5>
               <button
                 type="button"
                 class="btn-close"
@@ -125,9 +126,11 @@
                 aria-label="Close"
               ></button>
             </div>
-            <div class="modal-body p-2 p-lg-5">
-              <div class="container">
-                <div class="row gx-5 gy-5">
+            <div id="modal-body" class="modal-body p-2 p-lg-5">
+              <!-- Copy From here -->
+
+              <div class="container d-none">
+                <div class="row gx-0 gx-lg-5 gy-5">
                   <div class="col col-12 col-lg-5">
                     <div class="bg-light">
                       <img
@@ -143,13 +146,12 @@
                       released 2021, September 24
                     </p>
                     <hr />
-                    <table
-                      class="table table-striped table-bordered caption-top"
-                    >
+                    <table class="table table-striped table-bordered">
                       <h5 class="text-secondary fw-bold mt-4 mb-3">
                         Main Features
                       </h5>
                       <tbody>
+                        <!-- Will be Repeat -->
                         <tr>
                           <th class="text-capitalize pe-5 ps-3">storage</th>
                           <td>28GB/256GB/1TB storage, no card slot</td>
