--- a/index.html
+++ b/index.html
@@ -41,26 +41,7 @@
         id="phone-container"
         class="row row-cols-md-3 row-cols-sm-2 row-cols-1 gx-0 gx-sm-4 gy-4"
       >
-        <!-- Phone Card -->
-
-        <div class="d-none p-4 shadow bg-body rounded rounded-3">
-          <div class="bg-light">
-            <img
-              class="img-fluid mx-auto w-50 d-block py-4"
-              src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-mini.jpg"
-            />
-          </div>
-          <h4 class="text-center mt-3 mb-2">Apple iphone 13 min</h4>
-          <h5 class="text-center mb-4 text-secondary">Apple</h5>
-          <button
-            type="button"
-            class="btn btn-outline-primary d-block w-75 mx-auto py-2 fw-bold"
-            data-bs-toggle="modal"
-            data-bs-target="#foodDetails53043"
-          >
-            View Details
-          </button>
-        </div>
+        <!-- Will Inject Phone Card Here -->
       </div>
 
       <!-- Show All Button -->
@@ -94,17 +75,6 @@
     </section>
 
     <section id="modal-container" class="container">
-      <!-- Button trigger modal -->
-      <button
-        type="button"
-        class="btn btn-primary"
-        id="show-details-btn"
-        data-bs-toggle="modal"
-        data-bs-target="#phoneDetails"
-      >
-        Launch demo modal
-      </button>
-
       <!-- Modal -->
       <div
         class="modal fade"
@@ -127,67 +97,7 @@
               ></button>
             </div>
             <div id="modal-body" class="modal-body p-2 p-lg-5">
-              <!-- Copy From here -->
-
-              <div class="container d-none">
-                <div class="row gx-0 gx-lg-5 gy-5">
-                  <div class="col col-12 col-lg-5">
-                    <div class="bg-light">
-                      <img
-                        class="d-block w-75 p-4 mx-auto"
-                        src="https://fdn2.gsmarena.com/vv/bigpic/apple-iphone-13-mini.jpg"
-                        alt="Phone Image"
-                      />
-                    </div>
-                  </div>
-                  <div class="col col-12 col-lg-7">
-                    <h2>iPhone 13 Pro Max</h2>
-                    <p class="text-primary text-capitalize">
-                      released 2021, September 24
-                    </p>
-                    <hr />
-                    <table class="table table-striped table-bordered">
-                      <h5 class="text-secondary fw-bold mt-4 mb-3">
-                        Main Features
-                      </h5>
-                      <tbody>
-                        <!-- Will be Repeat -->
-                        <tr>
-                          <th class="text-capitalize pe-5 ps-3">storage</th>
-                          <td>28GB/256GB/1TB storage, no card slot</td>
-                        </tr>
-                        <tr>
-                          <th class="text-capitalize pe-5 ps-3">displaySize</th>
-                          <td>
-                            6.7 inches, 109.8 cm2 (~87.4% screen-to-body ratio)
-                          </td>
-                        </tr>
-                        <tr>
-                          <th class="text-capitalize pe-5 ps-3">chipSet</th>
-                          <td>Apple A15 Bionic (5 nm)</td>
-                        </tr>
-                        <tr>
-                          <th class="text-capitalize pe-5 ps-3">memory</th>
-                          <td>
-                            28GB 6GB RAM, 256GB 6GB RAM, 512GB 6GB RAM, 1TB 6GB
-                            RAM
-                          </td>
-                        </tr>
-                        <tr>
-                          <th class="text-capitalize pe-5 ps-3">sensors</th>
-                          <td>
-                            "Face ID",<br />
-                            "accelerometer", <br />"gyro",
-                            <br />"proximity",<br />
-                            "compass",<br />
-                            "barometer"<br />
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
+              <!-- Will Inject Modal Cotainer Here -->
             </div>
           </div>
         </div>
